--- a/isg-init.org
+++ b/isg-init.org
@@ -354,22 +354,30 @@
 
 ** company - auto completion
  #+BEGIN_SRC emacs-lisp
- (use-package company
-   :pin melpa-stable
-   :defer t
-   :config
-   (eval-after-load 'company
-     '(progn
-        ;; Reduce the time after which the company auto completion popup opens
-        ;; Reduce the number of characters before company kicks in
-        (setq company-idle-delay 0.2
-              company-minimum-prefix-length 1
-              company-tooltip-align-annotations t)
-       
-        (define-key company-active-map (kbd "C-n") 'company-select-next)
-        (define-key company-active-map (kbd "C-p") 'company-select-previous))))
+   (use-package company
+     :pin melpa-stable
+     :defer t
+     :config
+     (progn
+       ;; Reduce the time after which the company auto completion popup opens
+       ;; Reduce the number of characters before company kicks in
+       (setq company-idle-delay 0.0
+             company-show-numbers t
+             company-require-match nil
+             company-tooltip-align-annotations t
+             company-tooltip-margin 1
+             company-echo-delay 0
+             company-dabbrev-downcase nil
+             company-minimum-prefix-length 1
+             company-selection-wrap-around t
+             company-transformers '(company-sort-by-occurrence
+                                    company-sort-by-backend-importance))
+       (push (apply-partially #'cl-remove-if
+                              (lambda (c) (string-match-p "\\`[0-9]+\\'" c)))
+             company-transformers)
+       (define-key company-active-map (kbd "C-n") 'company-select-next)
+       (define-key company-active-map (kbd "C-p") 'company-select-previous)))
  #+END_SRC
-
 * language modes
 ** c
  #+BEGIN_SRC emacs-lisp
